# scripts

./: .gitignore  README.md  asm.py  asm.v9.py  cft.sh  cmd.py  create_tree.sh  data_to_sqlite.py  extract.sh  fibonacci.asm  fs.ipynb  git.py  ini.sh  jacoco.py  k8s-mgr.pyz  k8s.py  k8s_utils.py  k8s_utils.sh  md_extract.py  pyproject.toml  requirements.md  setup.cfg  snippet.py  subcommand.sh  sync-svc.sh  test.ini  test.ipynb  transpose.py
.claude/: settings.json
_snippet/: cmd.py  gzip.py  leetcode.py  scraper.py
asm/: __init__.py  __main__.py  assembler.py  cli.py  directives.py  enums.py  macho.py  parser.py
aws/: cw_getLog.py  pyproject.toml
aws/aws/: __init__.py  auth.py  cache.py  config.py  context.py  exceptions.py  logger.py  main.py  output.py
aws/aws/core/: __init__.py  decorators.py  loader.py
aws/aws/plugins/: __init__.py  cloudwatch.py  codecommit.py  cost.py  ec2.py  iam.py  lambda_fn.py  s3.py
aws/config/: default.yaml
aws/tests/: conftest.py  test_auth.py  test_cache.py  test_config.py  test_decorators.py  test_output.py
aws/tests/plugins/: test_ec2.py  test_iam.py  test_lambda.py  test_s3.py
core/: __init__.py  decorators.py  logger.py
file_format/: __init__.py  __main__.py  base.py  base_class_registry.py  cli.py  csv2sql.py  decorator_registry.py  file.ipynb  flat_file_processor.py  processor.py  test.py  value_converter.py
fs/: __init__.py  gz.py  rename.py
git/: __init__.py  __main__.py  cli.py  context.py  models.py
graph/: CollaborationManager.js  DDLToMxGraphConverter.js  DatabaseIntegration.js  ImportExportManager.js  (+13 more)
(+99 files in other folders)
